add function of search question list
