# internal/app/api/question_api.go
@@ -2,12 +2,13 @@ package api
 
 import (
 	"github.com/gin-gonic/gin"
+	"strconv"
 	"sylu-oj-gin/internal/app/schema"
 	"sylu-oj-gin/internal/app/service"
 	"sylu-oj-gin/pkg/error"
 )
 
-// @Summary 发布题目接口
+// AddQuestion @Summary 发布题目接口
 // @Description 发布题目
 // @Param request body schema.AddQuestion true "question message"
 // @Accept       json
@@ -22,7 +23,30 @@ func AddQuestion(c *gin.Context) {
 	}
 
 	id, _ := c.Get("UserID")
-	uid := id.(uint)
+	uid := id.(int)
 
 	service.AddQuestion(c, saq, uid)
+}
+
+// QuestionList @Summary 查看接口
+// @Description 查看题目列表
+// @Param page query number true "page number"
+// @Param number query number true "rows per page"
+// @Param search_title query string false "question title"
+// @Param search_tag query string false "question tag"
+// @Param search_degree query number false "question degree"
+// @Param order query number false "reorder"
+// @Accept       json
+// @Produce      json
+// @Success      200  {object}  error.ResponseNormal
+// @Router       /question/list [get]
+func QuestionList(c *gin.Context) {
+	page, _ := strconv.Atoi(c.Query("page"))
+	number, _ := strconv.Atoi(c.Query("number"))
+	searchTitle := c.Query("search_title")
+	searchTag := c.Query("search_tag")
+	searchDegree, _ := strconv.Atoi(c.Query("search_degree"))
+	order, _ := strconv.Atoi(c.Query("order"))
+
+	service.QuestionList(c, page, number, searchTitle, searchTag, searchDegree, order)
 }
